Doc/force-app/main/default/objects/Product_Ownership_Detail__c/Product_Ownership_Detail__c.object-meta.xml
<CustomObject>
    <label>Product Ownership Detail</label>
    <nameField>
        <displayFormat>POD-{000000}</displayFormat>
        <label>Product Ownership Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Ownership Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>