Doc/force-app/main/default/objects/Product_Ownership_Detail__c/fields/License_Basis_Text__c.field-meta.xml
<CustomField>
    <fullName>License_Basis_Text__c</fullName>
    <formula>License_basis_link__r.Name+&quot;;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Basis Text</label>
    <type>Text</type>
</CustomField>