Doc/force-app/main/default/objects/Product_Ownership_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product (Expiring 9/30/2018)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate: Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms of Business</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
            <value>
                <fullName>Time Builder</fullName>
            </value>
            <value>
                <fullName>eBillingHub Module</fullName>
            </value>
            <value>
                <fullName>CG Analyze</fullName>
            </value>
            <value>
                <fullName>CG Flow</fullName>
            </value>
            <value>
                <fullName>CG Protect</fullName>
            </value>
            <value>
                <fullName>CG Hold</fullName>
            </value>
            <value>
                <fullName>CG Lateral Hire</fullName>
            </value>
            <value>
                <fullName>CG Mobile</fullName>
            </value>
            <value>
                <fullName>CG Clear</fullName>
            </value>
            <value>
                <fullName>LegalKEY - Conflicts</fullName>
            </value>
            <value>
                <fullName>LegalKEY - Records</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>D&amp;B Company Profile &amp; Family Tree</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
                <isActive>false</isActive>
                <label>DTE Axiom</label>
            </value>
            <value>
                <fullName>DTE Axiom Mobile</fullName>
                <isActive>false</isActive>
                <label>DTE Axiom Mobile</label>
            </value>
            <value>
                <fullName>DTE Legacy</fullName>
                <isActive>false</isActive>
                <label>DTE Legacy</label>
            </value>
            <value>
                <fullName>DTE Legacy Mobile</fullName>
                <isActive>false</isActive>
                <label>DTE Legacy Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>