Doc/force-app/main/default/objects/Product_Ownership_Detail__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>SC-000016</description>
    <label>Product Line (EXPIRING 3/8)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
                <label>Integrate</label>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Pricing - Cloud</fullName>
            </value>
            <value>
                <fullName>Time - Cloud</fullName>
            </value>
            <value>
                <fullName>Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
                <isActive>false</isActive>
                <label>Third Party Product - Experience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>