Doc/force-app/main/default/objects/Product_Ownership_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own it</fullName>
            </value>
            <value>
                <fullName>Own Partial</fullName>
            </value>
            <value>
                <fullName>Own it - Limited License</fullName>
            </value>
            <value>
                <fullName>Own it - Trial</fullName>
            </value>
            <value>
                <fullName>Entitled</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Own it - Bridgeway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>