Doc/force-app/main/default/objects/Product_Ownership_Detail__c/fields/Trial_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Date__c</fullName>
    <description>for report on the date we are to “turn off” the data</description>
    <label>Trial Expiration Date</label>
    <type>Date</type>
</CustomField>